# nural

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  config.rs  config_serialize.rs  fuzzy.rs  main.rs  note_query.rs
src/commands/: append.rs  create.rs  delete.rs  init.rs  list.rs  mod.rs  open.rs  read.rs  utils.rs
src/models/: config_serialize.rs  context.rs  mod.rs  note.rs
src/util/: cli.rs  config.rs  mod.rs  note_query.rs
