[package]
name = "nural"
version = "0.1.3"
edition = "2024"
authors = ["Ben Smith <bensmith8229@gmail.com>"]
description = "Fast, minimal, context aware CLI note tool"
license = "GPL-3.0"
repository = "https://github.com/benj-8229/nural"
keywords = ["cli", "workflow", "productivity", "notes"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "nural"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
directories = "6.0.0"
fuzzy-matcher = "0.3.7"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
shellexpand = "3.1.1"
toml = "0.8.22"
